fix(Align): fix input to button alignment (#1575)

--- a/packages/components/src/components/Chat/Chat.module.scss
+++ b/packages/components/src/components/Chat/Chat.module.scss
@@ -31,3 +31,13 @@
     }
   }
 }
+
+@media (max-width: 550px) {
+  .chat .controls {
+    flex-wrap: wrap;
+
+    .accentButton {
+      flex-grow: 1;
+    }
+  }
+}
